test : kt에 맞게 Test방식 변경 및 Mock을 이용한 stub테스트로 변경